--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "monzilla",
   "version": "1.0.0",
-  "description": "The Godzilla of file monitoring tools",
-  "main": "dist/index.js",
+  "description": "The king of the file monitoring tools",
+  "bin": {
+    "snap": "dist/monzilla-cli.js"
+  },
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
     "build": "babel src -d dist -s --ignore *.test.js",
     "debug": "babel-node --inspect-brk src/monzilla-cli.js",
