--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "auto-bind2": "^1.0.3",
     "chalk": "^2.2.0",
     "glob": "^7.1.2",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "ps-tree": "^1.1.0"
   }
 }
