--- a/version.json5
+++ b/version.json5
@@ -9,11 +9,12 @@
   tags: {
     major: 1,
     minor: 1,
-    patch: 1,
-    build: 20171116,
+    patch: 2,
+    build: 20190810,
     revision: 0,
     tz: "America/Los_Angeles",
-    startYear: "2017"
+    startYear: "2017",
+    sequence: 1
   },
   fileTypes: [
     {
