--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "monzilla",
+  "name": "@johnls/monzilla",
   "version": "1.1.2",
-  "description": "The king of the file monitoring tools",
+  "description": "A file monitoring tool that shoots lasers",
   "bin": {
-    "monzilla": "dist/monzilla-cli.js"
+    "monzilla": "dist/monzilla.js"
   },
   "files": [
     "dist/**"
   ],
   "scripts": {
-    "build": "babel src -d dist -s --ignore *.test.js",
-    "debug": "babel-node --inspect-brk src/monzilla-cli.js",
-    "test": "jest",
-    "test:debug": "babel-node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
+    "build": "rm -rf dist/ && babel src -d dist -s --ignore *.test.js",
+    "start": "babel-node -- src/monzilla.js",
+    "start:debug": "babel-node --inspect-brk -- src/monzilla.js",
+    "test": "jest --coverage --",
+    "test:debug": "babel-node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
+    "deploy": "npm publish --access public"
   },
   "jest": {
     "testPathIgnorePatterns": [
       "node_modules/",
-      "scratch/"
+      "scratch/",
+      "dist/"
     ]
   },
   "keywords": [
@@ -27,18 +30,21 @@
   "author": "John Lyon-Smith",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "jest": "^21.2.1"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
+    "@babel/preset-env": "^7.3.4",
+    "jest-cli": "^24.1.0"
   },
   "dependencies": {
-    "auto-bind2": "^1.0.3",
-    "chalk": "^2.2.0",
-    "glob": "^7.1.2",
+    "autobind-decorator": "^2.4.0",
+    "chalk": "^2.4.2",
+    "glob": "^7.1.4",
     "minimist": "^1.2.0",
-    "ps-tree": "^1.1.0"
+    "ps-tree": "^1.2.0"
   }
 }
