--- a/version.json5
+++ b/version.json5
@@ -3,7 +3,7 @@
     "package.json",
     "src/version.js",
     "scratch/version.tag.txt",
-    "scratch/version.desc.txt",
+    "scratch/version.desc.txt"
   ],
   buildFormat: "full",
   tags: {
@@ -11,43 +11,43 @@
     minor: 1,
     patch: 2,
     build: 20190810,
-    revision: 2,
+    revision: 3,
     tz: "America/Los_Angeles",
     startYear: "2017",
-    sequence: 1,
+    sequence: 2
   },
   fileTypes: [
     {
       name: "Node Package",
       glob: "**/package.json",
       update: {
-        search: '^(?<begin> *"version" *: *")\\d+\\.\\d+\\.\\d+(?<end>" *, *)$',
-        replace: "${begin}${major}.${minor}.${patch}${end}",
-      },
+        search: "^(?<begin> *\"version\" *: *\")\\d+\\.\\d+\\.\\d+(?<end>\" *, *)$",
+        replace: "${begin}${major}.${minor}.${patch}${end}"
+      }
     },
     {
       name: "Javascript File",
       glob: "**/version.js",
       updates: [
         {
-          search: '^(?<begin>\\s*export\\s*const\\s*shortVersion\\s*=\\s*")\\d+\\.\\d+\\.\\d+(?<end>"\\s*)$',
-          replace: "${begin}${major}.${minor}.${patch}${end}",
+          search: "^(?<begin>\\s*export\\s*const\\s*shortVersion\\s*=\\s*\")\\d+\\.\\d+\\.\\d+(?<end>\"\\s*)$",
+          replace: "${begin}${major}.${minor}.${patch}${end}"
         },
         {
-          search: '^(?<begin>\\s*export\\s*const\\s*fullVersion\\s*=\\s*")\\d+\\.\\d+\\.\\d+\\+\\d+\\.\\d+(?<end>"\\s*)$',
-          replace: "${begin}${major}.${minor}.${patch}+${build}.${revision}${end}",
-        },
-      ],
+          search: "^(?<begin>\\s*export\\s*const\\s*fullVersion\\s*=\\s*\")\\d+\\.\\d+\\.\\d+\\+\\d+\\.\\d+(?<end>\"\\s*)$",
+          replace: "${begin}${major}.${minor}.${patch}+${build}.${revision}${end}"
+        }
+      ]
     },
     {
       name: "Commit tag file",
       glob: "**/*.tag.txt",
-      write: "${major}.${minor}.${patch}",
+      write: "${major}.${minor}.${patch}"
     },
     {
       name: "Commit tag description file",
       glob: "**/*.desc.txt",
-      write: "Version ${major}.${minor}.${patch}+${build}.${revision}",
-    },
-  ],
+      write: "Version ${major}.${minor}.${patch}+${build}.${revision}"
+    }
+  ]
 }
